Thu Dec  7 21:28:40 EST 2000  Ben Collins <bcollins@debian.org>

  * xml-parse.c:clear_policy(): Used to free the memory used by the policy
    struct. Call it after a parse error, and before start of parse.
  * debsig-verify.c:main(): call clear_policy() if we fail, even though
    parsing succeeded.

Thu Dec  7 16:18:56 EST 2000  Ben Collins <bcollins@debian.org>

  * docs/debsig-verify.1.in: Move to here, and generate at build so we get
    the right paths in the file.

Thu Dec  7 13:30:43 EST 2000  Ben Collins <bcollins@debian.org>

  * docs/debsig-verify.1: new file, man page.

Thu Dec  7 10:50:17 EST 2000  Ben Collins <bcollins@debian.org>

  * Added a --use-policy option, which takes the shortname of a policy
    that was listed with --list-policies. Allows the user to specify the
    policy they want to use.

Thu Dec  7 02:24:50 EST 2000  Ben Collins <bcollins@debian.org>

  * debsig-verify.c: Added --list-policies option.

Mon Dec  4 19:17:46 EST 2000  Ben Collins <bcollins@debian.org>

  * Added parsing to pull out the keyID from a full name. E.g. "Name
    <email@foo>" -> 28219193292JSAJALS