@@ -4,8 +4,9 @@ debsig-verify (0.2) unstable; urgency=low
     (do not verify the contents). Also added a --use-policy so the user
     can specify one of the shortnames in the list from the list option.
   * Added manpage for debsig-verify
+  * Added some code to free up alloc'd memory used by parsePolicy()
 
- -- Ben Collins <bcollins@debian.org>  Thu,  7 Dec 2000 02:24:08 -0500
+ -- Ben Collins <bcollins@debian.org>  Thu,  7 Dec 2000 21:53:32 -0500
 
 debsig-verify (0.1) unstable; urgency=low
 
